--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -58,7 +58,8 @@
     </div>
     <script>
         sentence = document.getElementById('sentence')
-        sentence.value = "Deepak and Arun Purohit have authored this project"
+        sentence.value = "Deepak and Arun Purohit are from Indian Institute of Technology, Dharwad"
+        tags = 'B-LOC B-MISC B-ORG B-PER E-LOC E-MISC E-ORG E-PER I-LOC I-MISC I-ORG I-PER O S-LOC S-MISC S-ORG S-PER'.split(' ')
         const inference = () => {
             preds = document.getElementById('prediction')
             preds.innerHTML = ''
@@ -71,6 +72,7 @@
             })
         }
         inference()
+
     </script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
