--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,7 +11,7 @@
     <title>BTech Project</title>
     <script>
         async function bring(arg){
-            url = `http://localhost:5000/api/${arg}`
+            url = `http://127.0.0.1:5000/api/${arg}`
             return new Promise((resolve, reject)=>{
                 var http = new XMLHttpRequest();
                 http.open("GET", url, true);
